samples/_failures_safe/1761689089_dfecbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_830744c1.c: In function ‘matrix_multiply’:
./samples/SAFE/__tmp_830744c1.c:128:13: error: expected ‘;’ at end of input
  128 |     return 1
      |             ^
      |             ;
./samples/SAFE/__tmp_830744c1.c:128:5: error: expected declaration or statement at end of input
  128 |     return 1
      |     ^~~~~~
